[package]
name = "new"
version = "0.1.0"
authors = ["Administrator"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.14.0"
libsqlite3-sys = { version = "0.9.1", features = ["bundled"]}
#libsqlite3-sys = { version = "0.18.0", features = ["bundled"]}
rocket = "0.4.5"
serde ={ version = "1.0.114", features = ["derive"]} 
sha2 = "0.9.1"


[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["sqlite_pool", "json"]
